# my-sqlalchemy-examples

./: README.md  examle.ipynb  pyproject.toml  session.ipynb
app/db/: sqlite.py
examples/crm/: README.md  models.py
examples/sns/sns/: crud.py  database.py  main.py  models.py
examples/sns/tests/: conftest.py  database.py  factories.py  test_crud.py
notebooks/: examle.ipynb  polymorphic_assocication.ipynb
polymorphic/: models.py
src/app/: models.py
